<resources>
    <string name="share">Share</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="more">More</string>
    <string name="action_choose_server">Choose server</string>
    <string name="stopping">Stopping</string>
    <string name="no_network">No network</string>
    <string name="no_internet_message">There is no internet connection. Do you want to turn WiFi on?</string>
    <string name="not_available_internet">The current internet connection is not available. Do you want to turn WiFi on?</string>
    <string name="failed_to_open_wifi_setting">Failed to open WiFi setting panel, please turn WiFi on.</string>
    <string name="vpn_nation_opt">Selected the fast server</string>
    <string name="vpn_nation_fr">France</string>
    <string name="vpn_nation_jp">Japan</string>
    <string name="vpn_nation_uk">United Kindom</string>
    <string name="vpn_nation_au">Australla</string>
    <string name="vpn_nation_de">Germany</string>
    <string name="vpn_nation_sg">Singapore</string>
    <string name="vpn_nation_nl">Netherlands</string>
    <string name="vpn_nation_us">United States</string>
    <string name="vpn_nation_egypt">Egypt</string>
    <string name="not_start_vpn">VPN connection not start. Please try again.</string>
    <string name="server_list">Server Location</string>
    <string name="repair">REPAIR</string>
    <string name="facebook">Facebook</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="scan_qr_code_download">Scan QR code\ndownload on Google Play</string>
    <string name="connecting_tip">VPN is connectiong. Please try it later!</string>
    <string name="stopping_tip">VPN is stopping. Please try it later!</string>
    <string name="timeout_tip">Connection timeout. Please retry!</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_dialog_title">Do you want to disconnect?</string>
    <string name="disconnect_to_refresh">Disconnect vpn to refresh?</string>
    <string name="fetch_server_list">Fetching server list</string>
    <string name="fetch_server_list_failed">Fetching server list timeout!</string>
    <string name="notification_no_time">Download: %1$d B/s, upload: %2$d B/s</string>
    <string name="server_not_available">The VPN server is not available right now. Plase try it later!</string>
    <string name="notification_vpn_stop">Your VPN is stopped. Touch to open.</string>
    <string name="notification_vpn_network_error1">Because of network instability,</string>
    <string name="notification_vpn_network_error2">your VPN is stopped. Touch to open.</string>
    <string name="success_connect">Successfully connected: %d times</string>
    <string name="failed_connect">Failed connected: %d times</string>
    <string name="free_used_time">Free Used Time: %s</string>
    <string name="enable_notification">Please enable notification permission in Settings.</string>
    <string name="news">news</string>
    <string name="video">Video</string>
    <string name="splash_subtitle">Fast and stable VPN</string>
    <string name="touch_to_connect">Touch to connect</string>
    <string name="enable_vpn_connection">Please enable VPN connection.</string>
    <string-array name="network_errors">
        <item>No available networks, turn Wi-Fi on.</item>
        <item>Connected, no Internet.</item>
    </string-array>
    <string name="tell_your_friends">Tell your friends</string>
    <string name="like_us">Like us</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="free_used_time2">Free Used Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="grab_speed_notification_title">Grab The Speed</string>
    <string name="grab_speed_notification_content">Click grab speed, so that your speed faster and more fluid!</string>
    <string name="warn_dialog_wifi_connected_message">Connecting to public WIFI is exposing personal data, making you vulnerable to hacking and other attacks. It is recommended to use Speed VPN to protect your data privacy.</string>
    <string name="warn_dialog_developed_country_inactive_user_message">It is recommended to use Speed VPN to protect your internet privacy and security and prevent others from snooping on your data.</string>
    <string name="warn_dialog_undeveloped_country_inactive_user_message">The world outside the wall is even more  exciting. Use Speed VPN to unblock geo graphically restricted websites and chan nels. Free and fast!</string>
    <string name="warn_dialog_net_speed_low_message">Detected your internet speed is too slow! For a smooth and fast experience, click get VPN Acceleration!</string>
    <string name="immediate_protection">Immediate Protection</string>
    <string name="indifferent">Indifferent</string>
    <string name="experience_now">Experience Now</string>
    <string name="ignore">Ignore</string>
    <string name="vpn_acceleration">VPN Acceleration</string>
    <string name="network_acceleration">Network acceleration</string>
    <string name="acceleration_completed_1">Acceleration completed</string>
    <string name="acceleration_completed_2a">Your network speed and one step faster!</string>
    <string name="accelerate_immediately">Accelerate immediately</string>
    <string name="timeout_dialog_title">Connect timeout</string>
    <string name="timeout_dialog_message">Connect timeout Possibly network signal not good,or your network operator stopped this visit.You can try again when the network signal is good,or try to connect other servers.</string>
    <string name="timeout_dialog_change_server">CHANGE VPN SERVER</string>
    <string name="timeout_dialog_connect_again">CONNECT AGAIN</string>
    <string name="timeout_dialog_cancel">CANCEL</string>
    <string name="updating_please_try_it_later">Updating,please try it later</string>
    <string name="building_tls">Building TLS...</string>
    <string name="waiting_server_reply">Waiting server reply...</string>
    <string name="requesting_connecting_configure">Requesting connection configure...</string>
    <string name="verifying">Verifying...</string>
    <string name="taking_a_coffee_break">Taking a coffee break...</string>
    <string name="building_configuration">Building configuration...</string>
    <string name="vpn_is_connecting">VPN is connecting, please try it later</string>
    <string name="vpn_is_stopping">VPN is stopping, please try it later</string>
    <string name="server_list_disconnect_title">Disconnect VPN to refresh?</string>
    <string name="server_list_full_toast">This server is full now，please refresh!</string>
    <string name="connect_result_success_title">VPN Connected</string>
    <string name="connect_result_success_message">Please enjoy secure connection</string>
    <string name="connect_result_ad_bt">VISIT</string>
    <string name="connect_result_disconnect_title">Connection details</string>
    <string name="connect_result_disconnect_server">Server</string>
    <string name="connect_result_disconnect_fastest">Fastest</string>
    <string name="connect_result_disconnect_free">free</string>
    <string name="connect_result_disconnect_duration">Duration</string>
    <string name="main_bt_get_more">GET MORE</string>
    <string name="main_bt_toast_content">Please try again later</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="no_ads_at_all">No ads at all</string>
    <string name="fast_secure_and_stable_servers">Fast,secure and stable servers</string>
    <string name="more_than_countries">More than %s countries</string>
    <string name="month">Month</string>
    <string name="free_time_limit_experience">Free time limit experience</string>
    <string name="faster_servers">FASTER SERVERS</string>
    <string name="successful_disconnect">Successful Disconnect</string>
    <string name="you_have_become_a_vip">You have become a VIP</string>
    <string name="pay_one_month_bt_text">$ %s / Month</string>
    <string name="pay_half_year_bt_text">$ %s / 6 Month</string>
    <string name="automatic_renewal">Automatic renewal</string>
    <string name="renewed_day">Renewed Day</string>
    <string name="your_vip_plan">Your VIP Plan</string>
    <string name="welcome">Welcome!</string>
    <string name="dear_premium_user">Dear Premium User</string>
    <string name="enjoy_now">Enjoy Now</string>
    <string name="months_plan">%s Months Plan</string>
    <string name="no_prize">No Prize</string>
    <string name="congratulations">Congratulations</string>
    <string name="join_vip">Join VIP</string>
    <string name="cruel_rejection">Cruel Rejection</string>
    <string name="wireless_traffic">Wireless traffic,unlimited time</string>
    <string name="cumulative_use_duration">You have won a total of %s days</string>
    <string name="luck_pan_title">Play lucky game to win more free days</string>
    <string name="free_over_dialog_message">The free experience has already arrived. You can also advertise when you join the VIP</string>
    <string name="add_minutes">+%s Days</string>
    <string name="take_you_to_experience">Take you to experience the speed of Internet access</string>
    <string name="visit_the_website_of_the_wall">Visit the website of the wall</string>
    <string name="take_you_to_see_the_wonderful">Take you to see the wonderful world outside the wall.</string>
    <string name="one_of_the_most_loved">One of the most loved VPNs</string>
    <string name="fast_connection">Fast connection, stable Internet access,used people say good.</string>
    <string name="lowest_price_online">lowest price online</string>
    <string name="the_green_vpn_connection">The Green VPN connection is fast, the Internet is stable, and your network connection is optimized for a fast Internet experience.Your best choice!</string>
    <string name="we_have_quality_servers">We have quality servers in many countries and regions to ensure the stability of your connection, you can easily access the walls of the site, such as:Facebook,Instagram, Whatsapp, Twitter,Netflix, etc.</string>
    <string name="we_can_protect_your_privacy">We can protect your privacy very well,hide your real network address for all network access, and share happiness with friends, friends and relatives at any time!</string>
    <string name="our_vip_uses_better_server">Our VIP uses a better server, and the price must be the best price for the same level of service. We hope that you can experience the best VPN service with the least amount of money.</string>
    <string name="protect_your_privacy">Protect your privacy online Hide your real network address for all network access!</string>
    <string name="over_the_wall_anytime">Over the wall anytime, anywhere Access web pages, social apps, games,etc. anytime, anywhere.</string>
    <string name="protect_security_privacy_hide">Protect security privacy Hide your IP address, browse without leaving traces, completely invisible.</string>
    <string name="green_vpn_is_an_extremely">GREEN VPN is an extremely stable and stable VPN service.</string>
    <string name="banner_1_title">Fast internet access</string>
    <string name="banner_2_title">Over the wall anytime, anywhere</string>
    <string name="banner_3_title">Protect security privacy</string>
    <string name="banner_1_message">Optimize your network connection,fast and stable online</string>
    <string name="banner_2_message">Allows you to easily access the wall outside...</string>
    <string name="banner_3_message">Hide your IP address and let you completely stealth</string>
    <string name="you_can_use_more_server">You can use more servers</string>
</resources>