<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_vip"
            android:icon="@drawable/icon_nav_vip"
            android:title="VIP"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/icon_share"
            android:title="@string/tell_your_friends"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/icon_like_us"
            android:title="@string/like_us"
            android:checkable="false"
            />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/icon_comment"
            android:title="@string/feedback"
            android:checkable="false"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"
            android:visible="false"
            android:checkable="false"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/about"
            android:checkable="false"
            />
    </group>

</menu>
