<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16"
        android:layout_marginLeft="@dimen/common_16"
        android:layout_marginRight="@dimen/common_16"
        android:layout_marginStart="@dimen/common_16"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/dialog_vip_top_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_vip_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/common_20"
                android:text="@string/welcome"
                android:textColor="@color/primary_black_text"
                android:textSize="@dimen/common_text_size_18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/common_20"
                android:text="@string/dear_premium_user"
                android:textSize="@dimen/common_text_size_15sp"/>

            <Button
                android:id="@+id/vip_dialog_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_30"
                android:layout_marginLeft="@dimen/common_16"
                android:layout_marginRight="@dimen/common_16"
                android:layout_marginTop="@dimen/common_16"
                android:background="@drawable/warn_dialog_button_bg"
                android:text="@string/enjoy_now"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>