<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vip_finish_background"
    android:orientation="vertical"
    tools:context="com.androapplite.shadowsocks.activity.VIPFinishActivity">
    <ImageView
        android:id="@+id/vip_finish_close"
        android:layout_width="@dimen/common_50"
        android:layout_height="@dimen/common_50"
        android:layout_gravity="end"
        android:padding="@dimen/common_10"
        android:scaleType="fitXY"
        android:src="@drawable/vip_close_bt_bg"/>

    <ImageView
        android:layout_width="@dimen/common_160"
        android:layout_height="@dimen/common_180"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/vip_big_icon_no_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_60"
        android:layout_marginStart="@dimen/common_60"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_no_ad"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_10"
            android:layout_marginStart="@dimen/common_10"
            android:text="@string/no_ads_at_all"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_60"
        android:layout_marginStart="@dimen/common_60"
        android:layout_marginTop="@dimen/common_5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_fast"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_10"
            android:layout_marginStart="@dimen/common_10"
            android:enabled="true"
            android:singleLine="true"
            android:text="@string/fast_secure_and_stable_servers"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_60"
        android:layout_marginStart="@dimen/common_60"
        android:layout_marginTop="@dimen/common_5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_server"/>

        <TextView
            android:id="@+id/vip_finish_server_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_10"
            android:layout_marginStart="@dimen/common_10"
            android:text="@string/you_can_use_more_server"
            android:enabled="true"
            android:singleLine="true"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_60"
        android:layout_marginStart="@dimen/common_60"
        android:layout_marginTop="@dimen/common_5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_free_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_10"
            android:layout_marginStart="@dimen/common_10"
            android:enabled="true"
            android:singleLine="true"
            android:text="@string/wireless_traffic"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_15sp"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16"
        android:layout_marginLeft="@dimen/common_16"
        android:layout_marginRight="@dimen/common_16"
        android:layout_marginStart="@dimen/common_16"
        android:layout_marginTop="@dimen/common_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_vip_plan"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/vip_finish_pay_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16"
        android:layout_marginLeft="@dimen/common_16"
        android:layout_marginRight="@dimen/common_16"
        android:layout_marginStart="@dimen/common_16"
        android:layout_marginTop="@dimen/common_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renewed_day"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/vip_finish_pay_renewed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16"
        android:layout_marginLeft="@dimen/common_16"
        android:layout_marginRight="@dimen/common_16"
        android:layout_marginStart="@dimen/common_16"
        android:layout_marginTop="@dimen/common_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatic_renewal"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/vip_finish_pay_automatic_renewal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primary_black_text"
            android:textSize="@dimen/common_text_size_16sp"/>
    </RelativeLayout>
</LinearLayout>
