<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.androapplite.shadowsocks.activity.ShareActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:onClick="shareByFacebook"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook_circle"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/facebook"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_cc" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:onClick="shareByBluetooth"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bluetooth_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/bluetooth"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_e3"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/vpn_qrcode"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/share_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/scan_qr_code_download"
                android:minLines="2"
                android:gravity="center"
                />
        </LinearLayout>
    </FrameLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/more"
        android:textAllCaps="false"
        android:inputType="textCapWords"
        android:onClick="moreShare"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

</LinearLayout>
